--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   font-family: "Montserrat", sans-serif;
   color: var(--text-light);
   background-color: var(--dark-bg);
-  background-image: url("URL_DA_SUA_IMAGEM_DE_TEXTURA_AQUI"); /* **SUBSTITUA AQUI** */
+  background-image: url("./assets/space.gif"); /* **SUBSTITUA AQUI** */
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -46,7 +46,7 @@ body {
 /* ESTILO DO TÍTULO */
 h1 {
   font-family: "Orbitron", sans-serif;
-  color: var(--border-color);
+  color: var(--card-bg);
   text-align: center;
   margin-bottom: 50px;
   font-size: 2.8em;
